# django_site_2_reviews

./: .gitignore  pyproject.toml  taskfile.ps1
recipient/: admin.py  context_processors.py  forms.py  middleware.py  models.py  tasks.py  urls.py  views.py
recipient/management/commands/: create_user_with_password.py
recipient/migrations/: 0001_initial.py  0002_recipient_specialities_review_recipient.py  0003_review_is_anonymous_alter_review_is_published.py  0004_alter_review_user.py
recipient/static/css/: add_review.css  all_recipients.css  base.css  card.css  dark-mode-button.css  footer.css  header.css  recipient.css  register.css  register_done.css  search.css  user.css  vir.css
recipient/static/widget/: widget.css  widget.js
recipient/templates/about_site/: o_kompanii.html  politika_konfidencialnosti.html  polzovatelskoe_soglashenie.html
recipient/templates/recipient/: add_review.html  all_recipients.html  base_page.html  edit_review.html  not_published_reviews.html  recipient_info.html  search_recipient.html  self_cabinet.html  share.html  success_review.html  user_info.html  vir.html
recipient/templates/registration/: login.html  register.html  register_done.html
reviews/: celery.py  settings.py  urls.py
utils/: constants.py  pp_requests.py  text_utils.py
